--- a/Assessments.Frontend.Web/wwwroot/css/site.css
+++ b/Assessments.Frontend.Web/wwwroot/css/site.css
@@ -330,3 +330,14 @@ h1 {
     border-top-color: #7f726b;
     margin-top:0;
 }
+@media only screen and (min-width: 750px) {
+    .only_mobile {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 750px) {
+    .main .hideonmobile {
+        display: none;
+    }
+}
